# app-template-python

./: .dockerignore  .flake8  .gitignore  Dockerfile  LICENSE  Makefile  Pipfile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  values.env
app/: main.py
app/api/: __init__.py
app/api/web/: api.py
app/cli/: cli.py
app/cli/start/: api.py  start.py
app/core/: __init__.py  config.py
app/schema/api/: web.py
notebook/: notebook.ipynb
scripts/: check_code.sh  docker_build.sh  docker_run.sh  it.sh  poetry_install.sh  run.sh  run_jupyter.sh
tests/: test_greeting.py  test_something.py  test_web_api.py
