[project]
name = "app"
version = "1.0.0"
description = "Python environment."
authors = [{name = "Sergey Pavlov", email = "self@sergeypavlov.dev"}]
requires-python = ">=3.12"
dependencies = []

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.1.3",
    "mypy>=1.6.1",
]

[tool.pdm.scripts]
lint = {composite = [
    "ruff format app -q",
    "ruff check app --fix -q",
    "mypy app"
]}

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"
show-source = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
strict = true
ignore_missing_imports = true
show_error_codes = true
