[project]
name = "app"
version = "1.0.0"
description = "Python environment."
authors = [{name = "Sergey Pavlov", email = "self@sergeypavlov.dev"}]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.3",
]

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.1.3",
    "mypy>=1.6.1",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
]

[tool.pdm.scripts]
lint = {composite = [
    "ruff format app -q",
    "ruff check app --fix -q",
    "mypy app"
]}

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"
show-source = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q"]
ignore = ["E721"]
fixable = ["ALL"]
unfixable = []
[tool.ruff.lint.per-file-ignores]
"__init__.py" = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
strict = true
ignore_missing_imports = true
show_error_codes = true
plugins = ["pydantic.mypy"]
exclude = []

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_classes = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["app"]
