[project]
name = "app-template-python"
version = "1.0.0"
description = "App template: Python."
authors = [{name = "Sergey Pavlov", email = "self@sergeypavlov.dev"}]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "litestar>=2.5.4",
    "typer>=0.9.0",
    "uvicorn[standard]>=0.27.0.post1",
    "gunicorn>=21.2.0",
]

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "coverage>=7.4.1",
    "isort>=5.13.2",
    "httpx>=0.26.0",
]

[tool.pdm.scripts]
lint-path = {composite = [
    "isort",
    "ruff format -q",
    "ruff check --fix -q",
    "mypy"
]}
lint = {composite = [
    "lint-path app",
    "lint-path tests"
]}
test = {composite = [
    "pytest -qq --cov=app --cov-report='' tests",
    "coverage html -q --data-file='.coverage'"
]}

[project.scripts]
app = "app.cli:entrypoint"

[tool.coverage.run]
omit = ["*/__init__.py"]
[tool.coverage.html]
directory = "htmlcov"

[tool.isort]
quiet = true
line_length = 100
multi_line_output = 3
profile = "black"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"
show-source = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q"]
ignore = ["E721"]
fixable = ["ALL"]
unfixable = []
[tool.ruff.lint.per-file-ignores]
"__init__.py" = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
strict = true
ignore_missing_imports = true
show_error_codes = true
plugins = ["pydantic.mypy"]
exclude = []

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_classes = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
